[CROSSDATA-41][Catalog] Fixed problems with tests using derby. Drop schema removed