@@ -64,6 +64,16 @@
             <name>Luis Cisneros</name>
             <email>lcisneros at stratio dot com</email>
         </developer>
+        <developer>
+            <id>pmadrigal</id>
+            <name>Pedro Madrigal</name>
+            <email>pmadrigal at stratio dot com</email>
+        </developer>
+        <developer>
+            <id>ccaballe</id>
+            <name>Cristian Caballero</name>
+            <email>ccaballero at stratio dot com</email>
+        </developer>
     </developers>
 
     <modules>
@@ -180,6 +190,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
